feat: add collection locking and run queries
